WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195467
[macOS UI-side compositing] Mouse handling can trigger a crash before we have a scrolling tree root
https://bugs.webkit.org/show_bug.cgi?id=195467
Summary
[macOS UI-side compositing] Mouse handling can trigger a crash before we have...
Simon Fraser (smfr)
Reported
2019-03-08 10:15:21 PST
[macOS UI-side compositing] Mouse handling can trigger a crash before we have a scrolling tree root
Attachments
Patch
(1.80 KB, patch)
2019-03-08 10:17 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-03-08 10:17:00 PST
Created
attachment 364026
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-03-08 10:17:58 PST
Comment on
attachment 364026
[details]
Patch Antti rubber-stamped this.
WebKit Commit Bot
Comment 3
2019-03-08 10:34:29 PST
Comment on
attachment 364026
[details]
Patch Clearing flags on attachment: 364026 Committed
r242645
: <
https://trac.webkit.org/changeset/242645
>
WebKit Commit Bot
Comment 4
2019-03-08 10:34:31 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-03-08 10:35:22 PST
<
rdar://problem/48717344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug