[macOS UI-side compositing] Mouse handling can trigger a crash before we have a scrolling tree root https://bugs.webkit.org/show_bug.cgi?id=195467

Reviewed by Antti Koivisto.

When launching MiniBrowser with UI-side compositing enabled in a state where the window
appears under the mouse, we can hit RemoteScrollingTree::handleMouseEvent() for a mouseEnter
event before we have a scrolling tree root node, so add a null check.

* UIProcess/RemoteLayerTree/RemoteScrollingTree.cpp:
(WebKit::RemoteScrollingTree::handleMouseEvent):


Canonical link: https://commits.webkit.org/209783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242645 268f45cc-cd09-0410-ab3c-d52691b4dbfc